[package]
name = "eui"
version = "0.1.0"
authors = ["Arthur Crippa Búrigo <arthurcburigo@gmail.com>"]
edition = "2018"
description = "Extended Unique Identifier (EUI)"
repository = "https://github.com/acburigo/eui"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3.2"
